[package]
name = "litrev"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = { version = "4.5.4", features = ["unstable-dynamic"] }
opener = "0.7.1"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.7"
